--- a/contacts-list-app/package.json
+++ b/contacts-list-app/package.json
@@ -26,6 +26,7 @@
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.14.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
