--- a/contacts-list-app/angular.json
+++ b/contacts-list-app/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "../node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -84,7 +85,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.scss",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "../node_modules/font-awesome/css/font-awesome.css",
+              "../node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "assets": [
