--- a/contacts-list-app/package.json
+++ b/contacts-list-app/package.json
@@ -30,9 +30,11 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-toastr": "^2.1.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "json-server": "^0.14.0",
+    "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
